2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fix the delete the conf and md5 files of agent
	to delete, before try delete conf and md5 files with name in uppercase.

2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: add second parameter for trace a log in server
	file (plain text).

2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: add checkbox to multiple delete
	modules in agent managent. And add class style css for disabled modules.
	* include/styles/pandora_minimal.css, include/styles/pandora_red.css,
	include/styles/pandora.css: Add "disabled_module" class for use this style.

2009-09-25  Sancho lerena <slerena@artica.es>

	* pandoradb.sql: SUSE is not very happy with some comments, fixed.

2009-09-24  Sancho Lerena  <slerena@artica.es>

	* pandora_console/operation/agentes/datos_agente.php: Data in dataview 
	must be complete data, not "rounded" data.

2009-09-21  Sancho Lerena  <slerena@artica.es>

	* include/functions_network_components.php,
	godmode/modules/manage_network_components.php: add icon duplicate (and
	necesary code...functions), that it's use for duplicate with easy the local
	components.

2009-09-21  Sancho Lerena  <slerena@artica.es>

	* install.php: Updated  version in the main screen (2.0 > 3.0)

2009-09-18  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: more changes to schema :(. Added id_group to custom graph
	
	* pandoradb_data.sql: Updated build number of DB schema,

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Added new field for upgrade
	script.

2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php: change the function "update_agent_module"
	for to add the update only that not delete pending.
	* godmode/agentes/massive_edit_modules.php: fix form to set disabled and
	history data as select box instead checkbox that this had bug because